--- a/package.json
+++ b/package.json
@@ -3,12 +3,20 @@
   "version": "1.0.1",
   "private": true,
   "devDependencies": {
+    "eslint": "^4.19.0",
+    "eslint-config-standard": "^11.0.0",
+    "eslint-config-standard-react": "^6.0.0",
+    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-node": "^6.0.1",
+    "eslint-plugin-promise": "^3.7.0",
+    "eslint-plugin-react": "^7.7.0",
+    "eslint-plugin-standard": "^3.0.1",
     "jest-expo": "^23.0.0",
     "react-native-scripts": "1.8.1",
     "react-test-renderer": "16.0.0",
     "rn-nodeify": "^8.3.0",
     "snazzy": "^7.0.0",
-    "standard": "^11.0.0"
+    "standard": "^11.0.1"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
