eslint tweaks; App.js linter erros fix

--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "1.0.1",
   "private": true,
   "devDependencies": {
+    "babel-eslint": "^8.2.2",
     "eslint": "^4.19.0",
     "eslint-config-standard": "^11.0.0",
     "eslint-config-standard-react": "^6.0.0",
+    "eslint-plugin-babel": "^4.1.2",
     "eslint-plugin-import": "^2.9.0",
     "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-promise": "^3.7.0",
