--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,18 @@
 {
+  "parser": "babel-eslint",
+  "parserOptions": {
+      "ecmaVersion": 8,
+      "sourceType": "module",
+      "ecmaFeatures": {
+          "jsx": true,
+          "modules": true
+      }
+  },
+  "plugins": [
+      "react", "standard"
+  ],
+  "env": {
+    "es6": true
+  },
   "extends": ["standard", "standard-react"]
 }
