add lint script to package

--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "android": "react-native-scripts android",
     "ios": "react-native-scripts ios",
     "postinstall": "./node_modules/.bin/rn-nodeify --install buffer,events,process,stream,util,inherits,fs,path --hack",
-    "test": "nodejs ./node_modules/.bin/mocha tests/* && node node_modules/jest/bin/jest.js"
+    "test": "nodejs ./node_modules/.bin/mocha tests/* && node node_modules/jest/bin/jest.js",
+    "lint": "./node_modules/.bin/standard | ./node_modules/.bin/snazzy"
   },
   "jest": {
     "preset": "jest-expo"
