--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "ios": "react-native-scripts ios",
     "postinstall": "./node_modules/.bin/rn-nodeify --install buffer,events,process,stream,util,inherits,fs,path --hack",
     "test": "nodejs ./node_modules/.bin/mocha tests/* && node node_modules/jest/bin/jest.js && npm run lint",
-    "lint": "./node_modules/.bin/eslint *.js screen/**/*.js --fix"
+    "lint": "./node_modules/.bin/eslint *.js screen/**/*.js screen/  --fix"
   },
   "jest": {
     "preset": "jest-expo"
