--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "android": "react-native-scripts android",
     "ios": "react-native-scripts ios",
     "postinstall": "./node_modules/.bin/rn-nodeify --install buffer,events,process,stream,util,inherits,fs,path --hack",
-    "test": "nodejs ./node_modules/.bin/mocha tests/* && node node_modules/jest/bin/jest.js && npm run lint",
-    "lint": "./node_modules/.bin/eslint *.js screen/**/*.js screen/  --fix",
+    "test": "npm run test-only && node node_modules/jest/bin/jest.js && npm run lint",
+    "lint": "./node_modules/.bin/eslint *.js screen/**/*.js screen/ class/ --fix",
     "test-only": "./node_modules/.bin/mocha tests/**/*.js"
   },
   "jest": {
