--- a/package.json
+++ b/package.json
@@ -29,9 +29,10 @@
     "android": "react-native-scripts android",
     "ios": "react-native-scripts ios",
     "postinstall": "./node_modules/.bin/rn-nodeify --install buffer,events,process,stream,util,inherits,fs,path --hack",
-    "test": "npm run test-only && node node_modules/jest/bin/jest.js && npm run lint",
+    "test": "npm run unit && npm run jest && npm run lint",
+    "jest": "node node_modules/jest/bin/jest.js",
     "lint": "./node_modules/.bin/eslint *.js screen/**/*.js screen/ class/ --fix",
-    "test-only": "./node_modules/.bin/mocha tests/**/*.js"
+    "unit": "./node_modules/.bin/mocha tests/**/*.js"
   },
   "jest": {
     "preset": "jest-expo"
@@ -42,6 +43,7 @@
     "bip21": "^2.0.1",
     "bitcoinjs-lib": "^3.3.2",
     "buffer": "^4.9.1",
+    "crypto-js": "^3.1.9-1",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-prettier": "^2.6.0",
     "expo": "^23.0.6",
