--- a/app.json
+++ b/app.json
@@ -3,29 +3,32 @@
     "sdkVersion": "23.0.0",
     "version": "1.2.0",
     "privacy": "public",
-    "platforms": ["ios"],
+    "platforms": [
+      "ios"
+    ],
     "ios": {
-      "buildNumber": "11",
-      "isRemoteJSEnabled":false,
+      "buildNumber": 14,
+      "isRemoteJSEnabled": false,
       "bundleIdentifier": "io.bluewallet.bluewallet",
       "infoPlist": {
         "NSLocationWhenInUseUsageDescription": "Discover local stores nearby that accept Bitcoin",
-        "NSCameraUsageDescription": "Allow BlueWallet to scan QR codes"
+        "NSCameraUsageDescription": "Allow BlueWallet to scan QR codes",
+        "ITSAppUsesNonExemptEncryption": true
       }
     },
-    "name":"Blue Wallet",
-    "description":"Bitcoin wallet app. Alpha version (iOS only)",
-    "slug":"bluewallet",
-    "githubUrl":"https://github.com/Overtorment/BlueWallet",
-    "orientation":"portrait",
-    "primaryColor":"#00aced",
-    "icon":"img/icon.png",
-    "notification":{
-      "icon":"https://s3.amazonaws.com/exp-us-standard/placeholder-push-icon.png",
-      "color":"#000000"
+    "name": "Blue Wallet",
+    "description": "Bitcoin wallet app. Alpha version (iOS only)",
+    "slug": "bluewallet",
+    "githubUrl": "https://github.com/Overtorment/BlueWallet",
+    "orientation": "portrait",
+    "primaryColor": "#00aced",
+    "icon": "img/icon.png",
+    "notification": {
+      "icon": "https://s3.amazonaws.com/exp-us-standard/placeholder-push-icon.png",
+      "color": "#000000"
     },
-    "splash":{
-      "backgroundColor":"#00aced"
+    "splash": {
+      "backgroundColor": "#00aced"
     }
   }
 }
