--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "postinstall": "./node_modules/.bin/rn-nodeify --install buffer,events,process,stream,util,inherits,fs,path --hack",
     "test": "npm run unit && npm run jest && npm run lint",
     "jest": "node node_modules/jest/bin/jest.js",
-    "lint": "./node_modules/.bin/eslint *.js screen/**/*.js screen/ class/ --fix",
+    "lint": "./node_modules/.bin/eslint *.js screen/**/*.js screen/ class/ models/ --fix",
     "unit": "./node_modules/.bin/mocha tests/**/*.js"
   },
   "jest": {
