--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-prettier": "^2.6.0",
     "expo": "^23.0.6",
+    "expo-analytics": "^1.0.7",
     "frisbee": "^1.6.4",
     "isaac": "0.0.5",
     "mocha": "^5.0.4",
