--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
-    "prepare": "git apply -R --ignore-whitespace patches/metro-bundler+0.9.2.patch",
+    "prepare": "git apply -R --ignore-whitespace patches/metro-bundler+0.9.2.patch; git apply patches/transaction_builder.js.patch; git apply ./patches/transaction.js.patch",
     "start": "react-native-scripts start",
     "eject": "react-native-scripts eject",
     "android": "react-native-scripts android",
@@ -42,7 +42,8 @@
     "bip21": "^2.0.1",
     "bip39": "^2.5.0",
     "bitcoinjs-lib": "^3.3.2",
-    "buffer": "^4.9.1",
+    "buffer": "^5.1.0",
+    "buffer-reverse": "^1.0.1",
     "crypto-js": "^3.1.9-1",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-prettier": "^2.6.0",
