--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-23.0.0.tar.gz",
     "react-native-camera": "^0.12.0",
     "react-native-elements": "^0.18.5",
+    "react-native-flexi-radio-button": "^0.2.2",
     "react-native-level-fs": "^3.0.0",
     "react-native-qrcode": "^0.2.6",
     "react-native-snap-carousel": "^3.7.2",
