OPS: fix after exp update

--- a/app.json
+++ b/app.json
@@ -30,6 +30,9 @@
     },
     "splash": {
       "backgroundColor": "#00aced"
+    },
+    "android": {
+      "package": "io.bluewallet.bluewallet"
     }
   }
 }
